perf(network): compile product policies within shared work budgets